@startuml

title __DECO's Class Diagram__\n

  namespace  {
    namespace om.example.deco {
      class com.example.deco.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.deco {
      class com.example.deco.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.deco {
      namespace model {
        interface com.example.deco.model.ChristmasTree {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.deco {
      namespace model {
        class com.example.deco.model.Girlanda {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.deco {
      namespace model {
        class com.example.deco.model.Present {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.deco {
      namespace model {
        class com.example.deco.model.Star {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.deco {
      namespace model {
        abstract class com.example.deco.model.TreeDecorator {
        }
      }
    }
  }
  

  com.example.deco.HelloApplication -up-|> javafx.application.Application
  com.example.deco.HelloController o-- com.example.deco.model.ChristmasTree : tree
  com.example.deco.model.Girlanda -up-|> com.example.deco.model.TreeDecorator
  com.example.deco.model.Present -up-|> com.example.deco.model.TreeDecorator
  com.example.deco.model.Star -up-|> com.example.deco.model.TreeDecorator
  com.example.deco.model.TreeDecorator .up.|> com.example.deco.model.ChristmasTree
  com.example.deco.model.TreeDecorator o-- com.example.deco.model.ChristmasTree : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
